[package]
name = "nordlet"
version = "0.1.2"
edition = "2021"
description = "Official Rust SDK for the Nordlet Accounting API"
license = "MIT"
repository = "https://github.com/nordlet/nordlet-sdk-rust"
documentation = "https://docs.rs/nordlet"

[lib]
doctest = false

[dependencies]
bytes = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "gzip"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"

